@@ -12,6 +12,9 @@
 
 	Fixed search messages in menus (nth time...).
 
+	Fixed automatic finishing in some situation when no terminal is available.
+	Thanks to tYGjQCsvVI.
+
 0.7.8-beta to 0.7.8
 
 	Added ga and gA keys to visual mode.  Thanks to geo909.
